src/test/ui/issues/issue-6801.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/issue-6801.rs:29:13
   |
LL |       let sq =  || { *x * *x };
   |                 -- borrow of `x` occurs here
LL | 
LL |       twice(x); //~ ERROR: cannot move out of
   |             ^ move out of `x` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
